# openreview-crawler

./: .env  .gitignore  FIELDS.md  README.md  paper_analysis.html  prompt.md  prompt_c1nt.md  prompt_c1t.md  prompt_dev.md  prompt_flash.md  prompt_v0_8.md  pyproject.toml  serve.py
01_collect/: probe_invitation.py  probe_venueid.py
02_score/: run_c3_full.py  score_c1_nothink.py  score_repeatability.py
03_filter/: CLAUDE_RULES_PROMPT.md  RULES_ENGINE_AUDIT.md  analysis_deep.py  analysis_eda.py  combined_corpus.jsonl  combined_corpus_jes_current.jsonl  combined_score.py  distribution_conclusions.json  explain_jes_final.py  math_filter.py  mmr_corpus.jsonl  mmr_select.py  pca_corpus.jsonl  pca_score.py  python_filter.py  rules_compare.py  serve.py  space_report.html  space_umap.html  space_umap.py  threshold_viz.py  viz.py
04_read/: paper_analysis.html  rules_compare.py  serve.py
archive/: iclr_crawler.py  iclr_crawler_playwright.py
data/: deprecated_validate_v0_8.jsonl  favorites.json  llm_c1_nothink_N50_test.jsonl  llm_c1_nothink_N50_test_failures.jsonl  llm_c3_v08_N50.jsonl  llm_test_run.jsonl  llm_test_v4flash_run.jsonl  llm_test_v4flash_think_run.jsonl  llm_test_v4pro_nothink_run.jsonl  llm_test_zheng.jsonl  sample_20.json  sample_N50_c3test.json  sample_N5_seed42.json  sample_N600_seed42.json  sample_temp_zheng.json
deploy/: run_c3_full.py  start.sh
explore/: analysis_report.md  codex_analysis_spec.md  distribution_analysis.py  field_labels.py  probe_decision_track.py  probe_note.py  probe_venueid_content.py  rules.json  rules_compare.py  rules_jes.json  (+1 more)
(+62 files in other folders)
