[project]
name = "openreview-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "openreview-py>=2.2.0",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "streamlit>=1.57.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]
