[project]
name = "openreview-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diptest>=0.10.0",
    "matplotlib>=3.10.9",
    "openreview-py>=2.2.0",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0",
    "streamlit>=1.57.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.7",
    "numba>=0.61.2",
]
